# rurki-projekt

./: .gitignore  README.md
code/: Cargo.toml
code/src/: main.rs
docs/: docs.tex  listings-rust.sty  main.tex
