[package]
name = "code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gauss-quad = "0.1.5"
ndarray = "0.14"
ndarray-linalg = { version = "0.13", features = ["openblas-static"] }
egui = "0.20.1"
eframe = "0.20.1"
